syntax = "proto3";

package b3;

service B3 {
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesReply);
  rpc PutMessages (PutMessagesRequest) returns (PutMessagesReply);
}

message GetMessagesRequest {
  string board = 1;
  int64 last_id = 2;
}

message GetMessagesReply {
  repeated GrpcB3Message messages = 1;
}

message PutMessagesRequest {
  string board = 1;
  repeated GrpcB3Message messages = 2;
}
message PutMessagesReply {
}

message GrpcB3Message {
  int64 id = 1;
  // braid::message as returned from strand_serialize
  bytes message = 2;
  string version = 3;
}